--- a/FrutosElqui.Mvc/FrutosElqui.Mvc.csproj
+++ b/FrutosElqui.Mvc/FrutosElqui.Mvc.csproj
@@ -16,4 +16,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FrutosElqui.Core\FrutosElqui.Core.csproj" />
+    <ProjectReference Include="..\FrutosElqui.Negocio\FrutosElqui.Negocio.csproj" />
+    <ProjectReference Include="..\FrutosElqui.Persistencia\FrutosElqui.Persistencia.csproj" />
+  </ItemGroup>
+
 </Project>
