- Se agregan los CRUD de bancos en la capa de aplicacion

--- a/FrutosElqui.Negocio/FrutosElqui.Negocio.csproj
+++ b/FrutosElqui.Negocio/FrutosElqui.Negocio.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FrutosElqui.Core\FrutosElqui.Core.csproj" />
+    <ProjectReference Include="..\FrutosElqui.Persistencia\FrutosElqui.Persistencia.csproj" />
   </ItemGroup>
 
 </Project>
