- Se incorpora settings y configuración de builder para obtener desde configuraciones los constructores de los servicios

--- a/FrutosElqui.Escritorio/FrutosElqui.Escritorio.csproj
+++ b/FrutosElqui.Escritorio/FrutosElqui.Escritorio.csproj
@@ -16,4 +16,10 @@
     <ProjectReference Include="..\FrutosElqui.Persistencia\FrutosElqui.Persistencia.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
