- Se reordenan la inyección de dependencias para más legibilidad

--- a/FrutosElqui.Escritorio/FrutosElqui.Escritorio.csproj
+++ b/FrutosElqui.Escritorio/FrutosElqui.Escritorio.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+    <PackageReference Include="Serilog.Extensions.Hosting" Version="4.1.2" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="3.3.0" />
   </ItemGroup>
 
   <ItemGroup>
